--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/gatos_app.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.6.2.jar=gson-2.6.2.jar
+file.reference.kotlin-stdlib-1.8.0.jar=kotlin-stdlib-1.8.0.jar
 file.reference.okhttp-4.4.0.jar=okhttp-4.4.0.jar
+file.reference.okio-2.10.0.jar=okio-2.10.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.okhttp-4.4.0.jar}:\
-    ${file.reference.gson-2.6.2.jar}
+    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.kotlin-stdlib-1.8.0.jar}:\
+    ${file.reference.okio-2.10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
